refactor: warnings corrected